--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form action="submit">
+		<label for="name">Name</label>
+		<input type="text" name="name" >
+		<br>
+
+		<label for="portfolio">Portfolio</label>
+		<input type="text" name="portfolio">
+		<br>
+		
+		<button>Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
