--- a/main.html
+++ b/main.html
@@ -9,15 +9,19 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
-	<form action="submit">
-		<label for="name">Name</label>
-		<input type="text" name="name" >
-		<br>
-
-		<label for="portfolio">Portfolio</label>
-		<input type="text" name="portfolio">
-		<br>
-		
+	<form action="/submit" method="post">
+		<label for="name">Enter Name</label>
+		<input type="text"  id="name" minlength="3" maxlength="50" placeholder="Enter your name">
+		<br><br>
+		<label for="portfolio">Enter Portfolio</label>
+		<input type="url" id-="portfolio" placeholder="Enter url" required>
+		<br><br>
+		<label for= "favColor">Choose Fav Color</label>
+		<input type="color" id="favColor" name="favColor">
+		<br><br>
+		<label for="likeness">Level of likeness</label>
+		<input type="range" min="0" max="100" id="likeness" name="likeness">
+		<br><br>
 		<button>Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
