--- a/main.html
+++ b/main.html
@@ -19,10 +19,10 @@
 		<label for= "favColor">Choose Fav Color</label>
 		<input type="color" id="favColor" name="favColor">
 		<br><br>
-		<label for="likeness">Level of likeness</label>
+		<label for="likeness">Likeness</label>
 		<input type="range" min="1" max="100" id="likeness" name="likeness">
 		<br><br>
-		<button>Submit</button>
+		<button type="submit">Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
